Removed deprecated method calls